language_tests/outputs/invalid/optional_chaining_invalid_call.out
error: optional unwrap requires an Optional value, found 'Profile'
 -> language_tests/source_files/invalid/optional_chaining_invalid_call.tr:5:12
	    let _ = make_profile()?.name
	            ^^^^^^^^^^^^^^
